--- a/backend/gitrank/package.json
+++ b/backend/gitrank/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gitrank",
-  "version": "0.0.3",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -12,7 +12,7 @@
     "http-errors": "~1.6.3",
     "jade": "^1.9.2",
     "morgan": "~1.9.1",
-    "mysql": "^2.18.1",
+    "node-html-parser": "^6.1.4",
     "octokit": "^2.0.10"
   }
 }
